Support Kobo Aura HD via tunemarkup tag

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -14,6 +14,7 @@ INTRODUCTION
 \tunemarkup{pghanlin}{\fontsize{15}{16.7}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{16.5}{19}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{15}{17}\selectfont}
+\tunemarkup{pgkoboaurahd}{\fontsize{17}{19.4}\selectfont}
 
 \bibemph{The British Study Edition of The Urantia Papers} is a translation of the Fifth Epochal Revelation (also known as ``The Urantia Book'')
 from American to British English as defined by the \bibemph{Oxford Dictionary of English}.
