--- a/tex/title.tex
+++ b/tex/title.tex
@@ -11,6 +11,7 @@
 
 \newpagecolor{ubpagecolor}\afterpage{\restorepagecolor}
 \tunemarkup{pghanlin}{\begin{center}\includegraphics[scale=1.64]{images/British-Study-Edition-Cover-tiny.jpg}\end{center}}
+\tunemarkup{pgkoboaurahd}{\begin{center}\includegraphics[scale=1.89]{images/British-Study-Edition-Cover-tiny.jpg}\end{center}}
 \tunemarkup{pgnexus7}{\begin{center}\includegraphics[scale=1.71]{images/British-Study-Edition-Cover-tiny.jpg}\end{center}}
 \tunemarkup{pgkindledx}{\begin{center}\includegraphics[scale=2.7]{images/British-Study-Edition-Cover-tiny.jpg}\end{center}}
 \newpage
@@ -26,26 +27,37 @@
 \tunemarkup{pgkindledx}{\fontsize{18.2}{32}\selectfont}
 \tunemarkup{pghanlin}{\fontsize{12}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{13.5}{20}\selectfont}
+\tunemarkup{pgkoboaurahd}{\fontsize{15.5}{20}\selectfont}
 THE BRITISH STUDY EDITION\\
 \tunemarkup{pgkindledx}{\fontsize{16.5}{32}\selectfont}
 \tunemarkup{pghanlin}{\fontsize{9}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{20}\selectfont}
-{\itshape OF}\\
+\tunemarkup{pgkoboaurahd}{\fontsize{12}{20}\selectfont}
+{\itshape OF}\\[1ex]
 \tunemarkup{pghanlin}{\fontsize{17}{20}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{25}{32}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{18.5}{20}\selectfont}
+\tunemarkup{pgkoboaurahd}{\fontsize{21}{20}\selectfont}
 \urantiabook\\
 \tunemarkup{pgkindledx}{\fontsize{16.5}{32}\selectfont}
 \tunemarkup{pghanlin}{\fontsize{9}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{20}\selectfont}
-{\itshape ALSO KNOWN AS}\\
+\tunemarkup{pgkoboaurahd}{\fontsize{12}{20}\selectfont}
+{\itshape ALSO KNOWN AS}\\[1ex]
 \tunemarkup{pghanlin}{\fontsize{15}{20}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{25}{32}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{15}{20}\selectfont}
+\tunemarkup{pgkoboaurahd}{\fontsize{18}{20}\selectfont}
 THE URANTIA BOOK\\
+\tunemarkup{pgkindledx}{\fontsize{16.5}{32}\selectfont}
+\tunemarkup{pghanlin}{\fontsize{9}{20}\selectfont}
+\tunemarkup{pgnexus7}{\fontsize{10}{20}\selectfont}
+\tunemarkup{pgkoboaurahd}{\fontsize{12}{20}\selectfont}
+{\itshape OR}\\[1ex]
 \tunemarkup{pgkindledx}{\fontsize{15}{32}\selectfont}
 \tunemarkup{pghanlin}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{11.2}{20}\selectfont}
+\tunemarkup{pgkoboaurahd}{\fontsize{13}{20}\selectfont}
 THE FIFTH EPOCHAL REVELATION\\
 }%
 {%
@@ -53,6 +65,7 @@ THE FIFTH EPOCHAL REVELATION\\
 \tunemarkup{pghanlin}{\fontsize{10}{13}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{16}{18}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{12}\selectfont}
+\tunemarkup{pgkoboaurahd}{\fontsize{13}{15}\selectfont}
 \itshape
 The Standard Reference Text in British English,\\
 with Metric Measures, Textual Variants,\\
@@ -61,6 +74,7 @@ Study Notes \&\ Illustrations\\
 \tunemarkup{pgkindledx}{\fontsize{14}{20}\selectfont}
 \tunemarkup{pghanlin}{\fontsize{9}{18}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{9}{18}\selectfont}
+\tunemarkup{pgkoboaurahd}{\fontsize{13}{20}\selectfont}
 Edited by Tigran Aivazian\\
 }%
 \vspace*{\stretch{0.6}}
@@ -94,7 +108,7 @@ Edited by Tigran Aivazian\\
 \parbox{0.9\linewidth}{\centering
 \textbf{\upshape\nocopyright\ No copyright is claimed on this edition.\\The text of the Urantia Papers is in the \itshape public domain}.\\[5pt]
 Cover design by Gary Tonge, www.vision-afar.com.\\
-Please send all comments \&\ suggestions to: {\makeatletter\upshape\bfseries Tigran~Aivazian~<aivazian.tigran@gmail.com>\makeatother}\\[1pt]
+Please send all comments \&\ suggestions to: {\makeatletter\upshape\bfseries Tigran~Aivazian~<tigran@bibles.org.uk>\makeatother}\\[1pt]
 The latest version of this book can be downloaded from:\\[1ex]
 \shadowbox{\upshape\bfseries http://www.bibles.org.uk}\\
 The apparatus (marked with a circle in the text) contains significant changes made since the 1955 first edition of the Urantia Book.\\
