--- a/tex/urantia-core.tex
+++ b/tex/urantia-core.tex
@@ -1,11 +1,17 @@
 % Google Nexus 7 (or any Android 7" colour device)
-\tunemarkup{pgnexus7}{\RequirePackage[dvips,headheight=19pt,headsep=2pt,vmargin={0.2in,0.15in},hmargin={0.07in},twoside=true,papersize={90.0mm,135.5625mm}]{geometry}}
+\tunemarkup{pgnexus7}{\RequirePackage[dvips,headheight=19pt,headsep=4pt,vmargin={0.2in,0.15in},hmargin={0.07in},twoside=true,papersize={90.0mm,135.5625mm}]{geometry}}
 
 % Amazon Kindle DX
 \tunemarkup{pgkindledx}{\RequirePackage[dvips,headheight=30pt,headsep=7pt,vmargin={0.27in,0.2in},hmargin={0.08in},twoside=true,papersize={140mm,203mm}]{geometry}}
 
 % 6" devices (Kindle, Nook, Hanlin V3, etc)
 \tunemarkup{pghanlin}{\RequirePackage[dvips,headheight=19pt,headsep=2pt,vmargin={0.2in,0.15in},hmargin={0.07in},twoside=true,papersize={90.0mm,120.0mm}]{geometry}}
+
+% Kobo Aura HD 7"
+\tunemarkup{pgkoboaurahd}{\RequirePackage[dvips,headheight=19pt,headsep=4pt,vmargin={0.2in,0.15in},hmargin={0.07in},twoside=true,papersize={102.0mm,136.0mm}]{geometry}}
+
+% Kobo Mini 5"
+\tunemarkup{pgkobomini}{\RequirePackage[dvips,headheight=19pt,headsep=2pt,vmargin={0.2in,0.15in},hmargin={0.07in},twoside=true,papersize={75.0mm,100.0mm}]{geometry}}
 
 % fix page dimentions in xelatex - can be dropped when geometry.sty
 % will become xetex-aware and/or geometry.cfg in texlive will be fixed
@@ -39,23 +45,6 @@
 \fancyfoot{}
 \fancyhead[L]{\bibheadfont\vs@range}
 \fancyhead[R]{\bibheadfont\bibheadpagesize\thepage}
-
-\newcommand{\uforeword}{%
-\newpage\thispagestyle{empty}%
-\begin{center}
-\parti
-\headerfont\bibpapertitlefont\forewordup\end{center}%
-\ubookdescr{p0}{
-   toc={\makebox[0.02\linewidth][l]{№}\makebox[0.09\linewidth][r]{0. }\makebox[0.82\linewidth][l]{\forewordtoc\bibdf}},
-   bookmark={\forewordbmk},
-   header={\forewordhdr},
-   abbr={p0}
-}%
-\setcounter{paper}{0}%
-\setcounter{secnum}{0}%
-\fancyhead[CO]{\bibheadfont\forewordup}%
-\bib@raise@anchor{\bibpdfbookmark[2]{0. \forewordbmk}{Foreword_0}}%
-}
 
 \newcommand{\upartheader}[1]{%
    \par\vspace{3ex}\pagebreak[3]%
@@ -114,21 +103,6 @@
    }\vspace{0.6ex}\linebreak
 }
 
-\newif\ifpaperfirst
-\paperfirsttrue
-\newif\ifpapernumdot
-\papernumdotfalse
-\newif\iflettrineclr
-% XXX disable for the printed version.
-\lettrineclrtrue
-
-\newcommand{\bibpaperdisplay}[2]{%
-      \begin{center}%
-       \headerfont\bibpaperfont\ifpaperfirst\papertxt\ #1\else#1\ifpapernumdot.\fi\ \papertxt\fi\\[3pt]
-       \addfontfeatures{WordSpace=2.0}\bibpapertitlefont\MakeUppercase{#2}\\
-     \end{center}%
-}
-
 \newcommand{\ublistelem}[1]{\kern1.0em\relax\makebox[0.2em][r]{#1}\kern0.1em\relax}
 
 \newcommand*{\usection}[1]{%
@@ -143,7 +117,6 @@
 \def\bibnobreakspace{ }
     % XXX for section-level bookmarks uncomment the following line and comment the one after
     \bib@raise@anchor{\bibpdfbookmark[2]{#1}{\bkname_\thechnum_\curr@vs}\label{p\thepaper_\thesecnum}\hypertarget{p\thepaper_\thesecnum}{}}%
-    %\bib@raise@anchor{\label{p\thepaper_\thesecnum}\hypertarget{p\thepaper_\thesecnum}{}}%
 \def\bibnobreakspace{\kern5pt\relax}
     \flushbottom\addtolength{\topskip}{0pt plus -20pt}
 }
@@ -157,73 +130,8 @@
 \providecommand{\latintext}{}
 \providecommand{\textlatin}[1]{{#1}}
 
-\renewcommand{\headrulewidth}{0.5pt}
-
-\tunemarkup{pghanlin}{%
-\renewcommand{\bibfnchapsize}{\headerfont\Large}
-\renewcommand{\bibfnvssize}{\headerfont\large}
-\protected\def\print@vssup#1{\makebox[0.2em][r]{\@textsuperscript{\headerfont\fontsize{8}{8}\selectfont#1}}\kern0.2em\relax}
-\newcommand{\bibcovertitlefont}{\parttitlefont\fontsize{18}{18}\selectfont\addfontfeature{LetterSpace=2.0,WordSpace=1.5}}
-\newcommand{\bibtocsuperheadfont}{\fontsize{13}{13}\selectfont}
-\newcommand{\bibheadpapersize}{\fontsize{8}{8}\selectfont}
-\renewcommand{\bibheadchapsize}{\fontsize{8}{8}\selectfont}
-\renewcommand{\bibheadversesize}{\fontsize{7}{7}\selectfont}
-\renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
-\newcommand{\bibpaperfont}{\Large}
-\newcommand{\bibpapertitlefont}{\LARGE}
-\definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
-\definecolor{ubdarkred}{rgb}{0.0, 0.0, 0.0}
-\definecolor{ubfblue}{rgb}{0.0, 0.0, 0.0}
-\newcommand{\vsetoff}{\vspace{1ex}}
-\newcommand{\hsetoff}{\hspace*{1em}}
-\setlength\parindent{8\p@}
-}
-
-\tunemarkup{pgnexus7}{%
-\renewcommand{\footnotesize}{\normalsize}
-\renewcommand{\bibfnchapsize}{\headerfont\Large}
-\renewcommand{\bibfnvssize}{\headerfont\large}
-\protected\def\print@vssup#1{\makebox[0.2em][r]{\@textsuperscript{\headerfont\fontsize{8}{8}\selectfont#1}}\kern0.2em\relax}
-\newcommand{\bibcovertitlefont}{\parttitlefont\fontsize{18}{18}\selectfont\addfontfeature{LetterSpace=2.0,WordSpace=1.5}}
-\newcommand{\bibtocsuperheadfont}{\fontsize{13}{13}\selectfont}
-\newcommand{\bibheadpapersize}{\fontsize{8}{8}\selectfont}
-\renewcommand{\bibheadchapsize}{\fontsize{8}{8}\selectfont}
-\renewcommand{\bibheadversesize}{\fontsize{7}{7}\selectfont}
-\renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
-\newcommand{\bibpaperfont}{\Large}
-\newcommand{\bibpapertitlefont}{\LARGE}
-\definecolor{ubpagebg}{rgb}{0.9, 0.9, 0.75}
-\definecolor{ubdarkred}{rgb}{0.5, 0.0, 0.0}
-\definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.6}
-\definecolor{ubgreen}{rgb}{0.0, 0.4, 0.0}
-\definecolor{ubfblue}{rgb}{0.093, 0.289, 0.777}
-\newcommand{\vsetoff}{\vspace{1ex}}
-\newcommand{\hsetoff}{\hspace*{1em}}
-\setlength\parindent{8\p@}
-\pagecolor{ubpagebg}
-}
-
-\tunemarkup{pgkindledx}{%
-\renewcommand{\bibfnchapsize}{\large\bfseries}
-\renewcommand{\bibfnvssize}{\normalsize\bfseries}
-\protected\def\print@vssup#1{\makebox[0.2em][r]{\@textsuperscript{\fontsize{9}{9}\selectfont#1}}\kern0.2em\relax}
-\newcommand{\bibcovertitlefont}{\titlefont\fontsize{30}{30}\selectfont\addfontfeature{LetterSpace=2.0,WordSpace=2.0}}
-\newcommand{\bibtocsuperheadfont}{\fontsize{20}{22}\selectfont}
-\renewcommand{\bibheadfont}{\headingfont\addfontfeature{LetterSpace=2.5,WordSpace=1.3}\fontsize{9.6}{9.6}\bfseries}
-\newcommand{\bibheadpapersize}{\fontsize{10.0}{10.0}\selectfont}
-\renewcommand{\bibheadchapsize}{\fontsize{9.5}{9.5}\selectfont}
-\renewcommand{\bibheadversesize}{\fontsize{9}{9}\selectfont}
-\renewcommand{\bibheadpagesize}{\fontsize{10}{10}\selectfont}
-\newcommand{\bibpaperfont}{\fontsize{15.0}{17}\selectfont}
-\newcommand{\bibpapertitlefont}{\fontsize{16.0}{18.0}\selectfont}
-\definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
-\definecolor{ubdarkred}{rgb}{0.0, 0.0, 0.0}
-\definecolor{ubfblue}{rgb}{0.0, 0.0, 0.0}
-\newcommand{\vsetoff}{\vspace{1ex}}
-\newcommand{\hsetoff}{\hspace*{1em}}
-}
-
-\renewcommand{\bibdropcapscolor}{ubdarkblue}
+\renewcommand{\headrulewidth}{0.0pt}
+\renewcommand{\bibdropcapscolor}{ubdarkred}
 
 \columnseprule=0.0pt
 \renewcommand{\bibfnvsmark}{}
@@ -239,119 +147,6 @@
     \bibheadpapersize\thepaper:\expandafter\expandafter\expandafter
       \vs@range@a\csname mark@vs@\thepage\endcsname
   }%
-}
-
-\newcommand{\parti}{%
-\clp
-\thispagestyle{empty}\vspace*{\stretch{0.2}}%
-\begin{center}%
-\tunemarkup{pghanlin}{\Large}%
-\tunemarkup{pgluluhb}{\huge}%
-\tunemarkup{pgkindledx}{\huge}%
-\tunemarkup{pgletter}{\Huge}%
-\tunemarkup{pgafour}{\Huge}%
-{\addfontfeature{LetterSpace=8.0,WordSpace=3.0}\titlefont\partitxt}\\[2ex]
-\tunemarkup{pghanlin}{\large}%
-\tunemarkup{pgluluhb}{\Large}%
-\tunemarkup{pgkindledx}{\LARGE}%
-\tunemarkup{pgletter}{\huge}%
-\tunemarkup{pgafour}{\huge}%
-{\addfontfeature{LetterSpace=6.0,WordSpace=2.0}\titlefont\partimix}\\[1ex]
-\tunemarkup{pghanlin}{\fontsize{8}{10}\selectfont}%
-\tunemarkup{pgluluhb}{\large}%
-\tunemarkup{pgkindledx}{\large}%
-\tunemarkup{pgletter}{\LARGE}%
-\tunemarkup{pgafour}{\LARGE}%
-\partisub\\
-\end{center}%
-\vspace*{\stretch{0.5}}\null
-\bibpart{\partiup}{\partitxt\ \partimix}{pt1}%
-\clp
-}
-
-\newcommand{\partii}{%
-\clp
-\thispagestyle{empty}\vspace*{\stretch{0.2}}%
-\begin{center}%
-\tunemarkup{pghanlin}{\Large}%
-\tunemarkup{pgluluhb}{\huge}%
-\tunemarkup{pgkindledx}{\huge}%
-\tunemarkup{pgletter}{\Huge}%
-\tunemarkup{pgafour}{\Huge}%
-{\addfontfeature{LetterSpace=8.0,WordSpace=3.0}\titlefont\partiitxt}\\[2ex]
-\tunemarkup{pghanlin}{\large}%
-\tunemarkup{pgluluhb}{\Large}%
-\tunemarkup{pgkindledx}{\LARGE}%
-\tunemarkup{pgletter}{\huge}%
-\tunemarkup{pgafour}{\huge}%
-{\addfontfeature{LetterSpace=8.0,WordSpace=3.0}\titlefont\partiimix}\\[1ex]
-\tunemarkup{pghanlin}{\fontsize{8}{10}\selectfont}%
-\tunemarkup{pgluluhb}{\large}%
-\tunemarkup{pgkindledx}{\large}%
-\tunemarkup{pgletter}{\LARGE}%
-\tunemarkup{pgafour}{\LARGE}%
-\partiisub\\
-\end{center}%
-\vspace*{\stretch{0.5}}\null
-\bibpart{\partiiup}{\partiitxt\ \partiimix}{pt2}%
-\clp
-}
-
-\newcommand{\partiii}{%
-\clp
-\thispagestyle{empty}\vspace*{\stretch{0.2}}%
-\begin{center}%
-\tunemarkup{pghanlin}{\Large}%
-\tunemarkup{pgluluhb}{\huge}%
-\tunemarkup{pgkindledx}{\huge}%
-\tunemarkup{pgletter}{\Huge}%
-\tunemarkup{pgafour}{\Huge}%
-{\addfontfeature{LetterSpace=8.0,WordSpace=3.0}\titlefont\partiiitxt}\\[2ex]
-\tunemarkup{pghanlin}{\large}%
-\tunemarkup{pgluluhb}{\Large}%
-\tunemarkup{pgkindledx}{\LARGE}%
-\tunemarkup{pgletter}{\huge}%
-\tunemarkup{pgafour}{\huge}%
-{\addfontfeature{LetterSpace=6.0,WordSpace=2.0}\titlefont\partiiimix}\\[1ex]
-\tunemarkup{pghanlin}{\fontsize{8}{10}\selectfont}%
-\tunemarkup{pgluluhb}{\large}%
-\tunemarkup{pgkindledx}{\large}%
-\tunemarkup{pgletter}{\LARGE}%
-\tunemarkup{pgafour}{\LARGE}%
-\partiiisub\\
-\end{center}%
-\vspace*{\stretch{0.5}}\null
-\bibpart{\partiiiup}{\partiiitxt\ \partiiimix}{pt3}
-\clp
-}
-
-\newcommand{\partiv}{%
-\clp
-\thispagestyle{empty}\vspace*{\stretch{0.2}}%
-\begin{center}%
-\tunemarkup{pghanlin}{\Large}%
-\tunemarkup{pgluluhb}{\huge}%
-\tunemarkup{pgkindledx}{\huge}%
-\tunemarkup{pgletter}{\Huge}%
-\tunemarkup{pgafour}{\Huge}%
-{\addfontfeature{LetterSpace=8.0,WordSpace=3.0}\titlefont\partivtxt}\\[2ex]
-\tunemarkup{pghanlin}{\large}%
-\tunemarkup{pgluluhb}{\Large}%
-\tunemarkup{pgkindledx}{\LARGE}%
-\tunemarkup{pgletter}{\huge}%
-\tunemarkup{pgafour}{\huge}%
-{\addfontfeature{LetterSpace=6.0,WordSpace=2.0}\titlefont\partivmix}\\[1ex]
-\tunemarkup{pghanlin}{\fontsize{8}{10}\selectfont}%
-\tunemarkup{pgluluhb}{\large}%
-\tunemarkup{pgkindledx}{\large}%
-\tunemarkup{pgletter}{\LARGE}%
-\tunemarkup{pgafour}{\LARGE}%
-\partivsubone\\[1ex]
-\partivsubtwo\\
-\end{center}%
-\vspace*{\stretch{0.5}}\null
-\bibpart{\partivup}{\partivtxt\ \partivmix}{pt4}
-\clp
 }
 
 % vine leaves
@@ -452,14 +247,75 @@
      \put(42,-57){\botr}
    \end{picture}%
 }%
+\tunemarkup{pgkoboaurahd}{%
+\setlength{\unitlength}{6.6pt}%
+\fontsize{\unitlength}{\unitlength}\usefont{U}{webo}{xl}{n}
+   \begin{picture}(0,0)(1.6,-55.9)%
+     % top left corner
+     \put(0,0){\topl}
+     % top plank
+     \multiput(1,0)(4,0){10}{\topplank}
+     % top right corner
+     \put(41,0){\topprer}
+     \put(42,0){\topr}
+     % right plank
+     \multiput(42,-1)(0,-4){14}{\hr}
+     \multiput(42,-2)(0,-4){14}{\hhr}
+     \multiput(42,-3)(0,-4){14}{\hhhr}
+     \multiput(42,-4)(0,-4){14}{\hhhhr}
+     % left plank
+     \multiput(0,-1)(0,-4){14}{\hhhhl}
+     \multiput(0,-2)(0,-4){14}{\hl}
+     \multiput(0,-3)(0,-4){14}{\hhl}
+     \multiput(0,-4)(0,-4){14}{\hhhl}
+     % bottom left corner
+     \put(0,-57){\botl}
+     % bottom plank
+     \multiput(1,-57)(4,0){10}{\botplank}
+     % bottom right corner
+     \put(41,-57){\botprer}
+     \put(42,-57){\botr}
+   \end{picture}%
+}%
+\tunemarkup{pgnexus7}{%
+\setlength{\unitlength}{6.56pt}%
+\fontsize{\unitlength}{\unitlength}\usefont{U}{webo}{xl}{n}
+   \begin{picture}(0,0)(1.6,-55.9)%
+     % top left corner
+     \put(0,0){\topl}
+     % top plank
+     \multiput(1,0)(4,0){9}{\topplank}
+     % top right corner
+     \put(36,0){\topprer}
+     \put(37,0){\topr}
+     % right plank
+     \multiput(37,-1)(0,-4){14}{\hr}
+     \multiput(37,-2)(0,-4){14}{\hhr}
+     \multiput(37,-3)(0,-4){14}{\hhhr}
+     \multiput(37,-4)(0,-4){14}{\hhhhr}
+     % left plank
+     \multiput(0,-1)(0,-4){14}{\hhhhl}
+     \multiput(0,-2)(0,-4){14}{\hl}
+     \multiput(0,-3)(0,-4){14}{\hhl}
+     \multiput(0,-4)(0,-4){14}{\hhhl}
+     % bottom left corner
+     \put(0,-57){\botl}
+     % bottom plank
+     \multiput(1,-57)(4,0){9}{\botplank}
+     % bottom right corner
+     \put(36,-57){\botprer}
+     \put(37,-57){\botr}
+   \end{picture}%
+}%
 \endgroup
 }
 
 %\tunemarkup{pgafour}{\tolerance=400}
 %\tunemarkup{pgletter}{\tolerance=400}
-\tunemarkup{pgluluhb}{\tolerance=9999}
+%\tunemarkup{pgluluhb}{\tolerance=9999}
 \tunemarkup{pgkindledx}{\tolerance=9999}
 \tunemarkup{pghanlin}{\tolerance=9999}
+\tunemarkup{pgkoboaurahd}{\tolerance=9999}
 \tunemarkup{pgnexus7}{\tolerance=9999}
 %\widowpenalty=9000
 %\clubpenalty=9000
