--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -8,12 +8,10 @@
 \pagestyle{empty}
 \include{tex/title}\newpage
 \pagestyle{fancy}
-\tunemarkup{pgafour}{\include{tex/paper-titles}\clp}
-\tunemarkup{pgletter}{\include{tex/paper-titles}\clp}
 \tunemarkup{pghanlin}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents\null\newpage}
 \tunemarkup{pgnexus7}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents\null\newpage}
-\tunemarkup{pgkindledx}{\include{tex/paper-titles}\newpage}
-\tunemarkup{pgluluhb}{\bibtableofcontents\null\clp}
+\tunemarkup{pgkoboaurahd}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents\null\newpage}
+\tunemarkup{pgkindledx}{\include{tex/paper-titles}}
 \include{tex/intro}\newpage
 \include{tex/p000}
 \include{tex/p001}
