Include some more illustrations in the non-public PDF files.

--- a/tex/p035.tex
+++ b/tex/p035.tex
@@ -25,6 +25,7 @@
 \usection{3.\bibnobreakspace The Melchizedek Worlds}
 \vs p035 3:1 The Melchizedeks occupy a world of their own near Salvington, the universe headquarters. This sphere, by name Melchizedek, is the pilot world of the Salvington circuit of 70 primary spheres, each of which is encircled by six tributary spheres devoted to specialized activities. These marvellous spheres --- 70 primaries and 420 tributaries --- are often spoken of as the Melchizedek University. Ascending mortals from all the constellations of Nebadon pass through training on all 490 worlds in the acquirement of residential status on Salvington. But the education of ascenders is only one phase of the manifold activities taking place on the Salvington cluster of architectural spheres.
 \vs p035 3:2 The 490 spheres of the Salvington circuit are divided into ten groups, each containing seven primary and 42 tributary spheres. Each of these groups is under the general supervision of some one of the major orders of universe life. The first group, embracing the pilot world and the next six primary spheres in the encircling planetary procession, is under the supervision of the Melchizedeks. These Melchizedek worlds are:
+\tunemarkup{private}{\begin{center}\includegraphics[angle=90,scale=\tunemarkup{pgkoboaurahd}{1.89}\tunemarkup{pghanlin}{1.66}\tunemarkup{pgnexus7}{1.88}\tunemarkup{pgkindledx}{1.57}]{../urantia-pictures/SALVINGTON_700.jpg}\end{center}}
 \vs p035 3:3 \ublistelem{1.}\bibnobreakspace The pilot world --- the home world of the Melchizedek Sons.
 \vs p035 3:4 \ublistelem{2.}\bibnobreakspace The world of the physical\hyp{}life schools and the laboratories of living energies.
 \vs p035 3:5 \ublistelem{3.}\bibnobreakspace The world of morontia life.
