--- a/tex/p032.tex
+++ b/tex/p032.tex
@@ -23,6 +23,7 @@
 \vs p032 2:10 Satania is not a uniform physical system, a single astronomic unit or organization. Its 619 inhabited worlds are located in over 500 different physical systems. Only 5 have more than 2 inhabited worlds, and of these only 1 has 4 peopled planets, while there are 46 having 2 inhabited worlds.\fnst{\textbf{Its 619 \ldots\ worlds.}, Assuming that there are no physical systems in Satania with more than 4 inhabited planets, it is very easy to work out the numbers of systems with 1 and 3 inhabited planets --- these turn out to be 511 and 4, respectively. And the total number of physical systems in Satania turns out to be 562.}
 \vs p032 2:11 The Satania system of inhabited worlds is far removed from Uversa and that great sun cluster which functions as the physical or astronomic centre of the seventh superuniverse. From Jerusem, the headquarters of Satania, it is over 200,000 light\hyp{}years to the physical centre of the superuniverse of Orvonton, far, far away in the dense diameter of the Milky Way. Satania is on the periphery of the local universe, and Nebadon is now well out towards the edge of Orvonton. From the outermost system of inhabited worlds to the centre of the superuniverse is a trifle less than 250,000 light\hyp{}years\fnst{\textbf{250,000 light\hyp{}years}, This implies that the present estimate of the size of Milky Way galaxy (50,000\,ly) is at least five times lower than the actual size thereof.}.
 \vs p032 2:12 The universe of Nebadon now swings far to the south and east in the superuniverse circuit of Orvonton. The nearest neighbouring universes are: Avalon\fnst{\textbf{Avalon}, This word occurs 5 times in the Urantia Papers (\bibref[38:5.1]{p038 5:1}, \bibref[66:2.7]{p066 2:7}, \bibref[67:6.5]{p067 6:5} and \bibref[77:2.6]{p077 2:6}). The word ``Avalon'' first appears in Geoffrey of Monmouth's historical account \bibemph{Historia Regum Britanni\ae} (``The History of the Kings of Britain'', c.~1136) as the place where King Arthur's sword Excalibur (Caliburnus) was forged and later where Arthur was taken to recover from his wounds after the Battle of Camlann --- his final battle. The island was ruled by the enchantress Morgan le Fay and her eight sisters, all of them skilled in the healing arts. In Latin it was called \bibemph{Insula Avallonis} in the \bibemph{Historia}. In the later \bibemph{Vita Merlini} (``The Life of Merlin'', c.~1150) he called it \bibemph{Insula Pomorum} the ``isle of apples''. The name is generally considered to be of Welsh origin (though an Old Cornish or Old Breton origin is also possible), derived from Old Welsh \bibemph{abal}, ``apple'', or \bibemph{aball}, ``apple tree'' (in later Middle Welsh spelled \bibemph{aval, avall;} now Modern Welsh \bibemph{afal, afall}). Sir John Rhys, however (\bibemph{Studies in the Arthurian Legend}, 1891), linked the name Avalon with that of Aballach, a dark Celtic divinity and places Avalon at the west coast in Cornwall. Malory identifies Avalon with Glastonbury in Somerset, and this may be connected with Celtic legends about an ``isle of glass'' inhabited by deceased heroes.}, Henselon, Sanselon, Portalon, Wolvering, Fanoving, and Alvoring.
+\tunemarkup{private}{\begin{center}\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.58}\tunemarkup{pghanlin}{0.58}\tunemarkup{pgnexus7}{0.66}\tunemarkup{pgkindledx}{0.58}]{../urantia-pictures/Mortdarthur.jpg}\end{center}}
 \vs p032 2:13 \pc But the evolution of a local universe is a long narrative. Papers dealing with the superuniverse introduce this subject, those of this section, treating of the local creations, continue it, while those to follow, touching upon the history and destiny of Urantia, complete the story. But you can adequately comprehend the destiny of the mortals of such a local creation only by a perusal of the narratives of the life and teachings of your Creator Son as he once lived the life of man, in the likeness of mortal flesh, on your own evolutionary world.
 \usection{3.\bibnobreakspace The Evolutionary Idea}
 \vs p032 3:1 The only creation that is perfectly settled is Havona, the central universe, which was made directly by the thought of the Universal Father and the word of the Eternal Son. Havona is an existential, perfect, and replete universe, surrounding the home of the eternal Deities, the centre of all things. The creations of the seven superuniverses are finite, evolutionary, and consistently progressive.
