Uncomment Garamond build (commented out by mistake in the previous commit).

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -10,10 +10,10 @@
 
 % various font families
 % (for now support just Adobe Garamond Premier Pro Opticals)
-%\tunemarkuptag{garamond}
+\tunemarkuptag{garamond}
 
 % comment out for public PDF build
-\tunemarkuptag{private}
+%\tunemarkuptag{private}
 
 \setdefaultlanguage{english}
 
